--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       run: sed -i -e '/^  -g$/d' $ANDROID_NDK_LATEST_HOME/build/cmake/android-legacy.toolchain.cmake
 
     - name: apt
-      run: sudo apt-get install -y meson patchelf unzip curl python3-pip flex bison zip python3-mako python-is-python3
+      run: sudo apt-get install -y meson patchelf python3-pip flex bison python3-mako python-is-python3 glslang-tools
 
     - name: build
       run: |
