--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ env:
 
 jobs:
   release:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - name: ndk-fix-debug
@@ -23,12 +23,14 @@ jobs:
 
         sed -e "s|NDKDIR|$ANDROID_NDK_LATEST_HOME|g" < ../android-aarch64 > android-aarch64
         patch -p1 -i ../mesa-implement-android_stub.patch
+        patch -p1 -i ../mesa-android-include-all-vulkan-extension.patch
 
         meson setup build-android --cross-file ./android-aarch64 \
             -Dbuildtype=release \
             -Dplatforms=android \
             -Dplatform-sdk-version=26 \
             -Dandroid-stub=true \
+            -Dvideo-codecs= \
             -Dgallium-drivers= \
             -Dvulkan-drivers=freedreno \
             -Dfreedreno-kmds=kgsl \
